# StudyFFmpeg

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  learn-ffmpeg.cpp
app/src/main/java/com/byteflow/learnffmpeg/: AVRecorderActivity.java  MainActivity.java  NativeMediaPlayerActivity.java  VideoRecorderActivity.java
app/src/main/java/com/byteflow/learnffmpeg/util/: CommonUtils.java
app/src/main/res/values/: colors.xml
